fix:https://github.com/Zimbra-Community/owncloud-zimlet/issues/216 Add a visible Root folder for the folder picker and fix the tree identation level

--- a/zimlet/tk_barrydegraaff_owncloud_zimlet.css
+++ b/zimlet/tk_barrydegraaff_owncloud_zimlet.css
@@ -88,3 +88,7 @@ display: none;
     border: 1px solid #ccc;
     border-top: none;
 }
+
+#ownCloudZimletFolderPicker [aria-level="2"] {
+margin-left:15px !important;
+}
